syntax = "proto3";

package auth;

option go_package ="services/auth/authpb";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse { string access_token = 1; }

message SignupRequest{
  string username = 1;
  string password =2;
  string role =3;
}

message SignupResponse{
  string username=1;
  string id=2;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {};
  rpc Signup(SignupRequest) returns(SignupResponse){};
}
